syntax = 'proto3';
package rspub_pb;

import "Common.proto";

message LinearRing
{
    repeated Vec3 ring = 1 [packed=true];
}

message Polygon {
    LinearRing exterior = 1;
    repeated LinearRing holes = 2 [packed=true]; 
}

message TouchdownMessage
{
    Polygon landing_site = 1;
    Vec3 touchdown_point = 2;
    float touchdown_dist = 3;
    string mesh_type = 4;
}
